# lightning-hydra-template

./: README.md  pyproject.toml
configs/experiment/: train_raphnet.yaml
configs/model/: raphnet.yaml
src/models/components/: raphnet.py
