[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Raphael Schwinger <raphaelschwinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
torchvision = "^0.21.0"
lightning = "^2.5.0.post0"
torchmetrics = "^1.6.1"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
wandb = "^0.19.7"
rootutils = "^1.0.7"
pre-commit = "^4.1.0"
rich = "^13.9.4"
pytest = "^8.3.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"